design listing & map for the location

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -13,4 +13,6 @@
 @import 'index';
 @import 'responsive';
 
-@import 'module/login';
+@import 'module/header.scss';
+@import 'module/card.scss';
+@import 'module/map.scss';
